crates/cribo/tests/snapshots/bundled_code@try_except_function_export.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/try_except_function_export/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
test_module = _cribo.types.SimpleNamespace(__name__='test_module', __initializing__=False, __initialized__=False)
def _cribo_init___cribo_e6f4c0_test_module(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    """Module with function defined in try-except-else block."""
    try:
        import nonexistent_module
        test_module.nonexistent_module = nonexistent_module
        HAS_MODULE = True
        test_module.HAS_MODULE = HAS_MODULE
    except ImportError:

        def get_function():
            return "fallback function"
        HAS_MODULE = False
        test_module.HAS_MODULE = HAS_MODULE
    else:

        def get_function():
            return "real function with module"
    self.get_function = get_function
    self.__initialized__ = True
    self.__initializing__ = False
    return self
test_module.__init__ = _cribo_init___cribo_e6f4c0_test_module
"""Test case for functions defined in try-except-else blocks."""
test_module = _cribo_init___cribo_e6f4c0_test_module(test_module)
get_function = test_module.get_function
result = get_function()
print(result)
