crates/cribo/tests/snapshots/bundled_code@version_import_complex.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/version_import_complex/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
__version__ = "2.0.0"
def get_user_agent():
    """Return a user agent string with version."""
    return f"mypackage/{__version__}"
"""Utility module that imports __version__ from a sibling module."""
"""Version information."""
"""Main package that exposes version and imports submodules."""
mypackage = _cribo.types.SimpleNamespace(__name__='mypackage')
mypackage_utils = _cribo.types.SimpleNamespace(__name__='mypackage.utils')
mypackage.utils = mypackage_utils
mypackage___version__ = _cribo.types.SimpleNamespace(__name__='mypackage.__version__')
mypackage.__version__ = mypackage___version__
utils = mypackage_utils
mypackage_utils.get_user_agent = get_user_agent
mypackage___version__.__version__ = __version__
"""Test fixture for importing __version__ in a complex module structure."""
mypackage.__version__ = __version__
print(f"User agent: {get_user_agent()}")
print(f"Package version: {mypackage.__version__}")
