crates/cribo/tests/snapshots/bundled_code@wildcard_all_tuple.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/wildcard_all_tuple/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
exporter = _cribo.types.SimpleNamespace(__name__='exporter', __doc__='Export a single public symbol through tuple-based __all__.')
"""Export a single public symbol through tuple-based __all__."""
def used():
    """Return the symbol that should survive wildcard import tree-shaking."""
    return "used from tuple __all__"
exporter.used = used
"""Exercise wildcard imports from modules whose __all__ is declared as a tuple."""
used = exporter.used
def main():
    print(used())
if __name__ == "__main__":
    main()
