crates/cribo/tests/snapshots/bundled_code@wrapper_stdlib_imports.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/wrapper_stdlib_imports/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import functools
import types
@functools.cache
def __cribo_init___cribo_138853_wrapper_module():
    module = types.SimpleNamespace()
    """Module with side effects that requires wrapping."""
    import logging
    print("Module loaded - this is a side effect")

    def get_logger(name):
        """Get a logger instance using the logging module."""
        return logging.getLogger(name)
    module.get_logger = get_logger
    return module
"""Test that stdlib imports work correctly inside wrapper functions."""
wrapper_module = __cribo_init___cribo_138853_wrapper_module()
get_logger = wrapper_module.get_logger
logger = get_logger("test")
print(f"Logger name: {logger.name}")
print("Success: stdlib imports work in wrapper functions!")
