crates/cribo/tests/snapshots/bundled_code@xfail_ast_rewrite_parameter_shadow.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_ast_rewrite_parameter_shadow/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

"""Test fixture for parameter names shadowing global/class names.\n\nThis fixture demonstrates the pattern where function parameters shadow\nimportant module-level names (classes, functions, constants).\n"""
"""Models module containing classes that will be shadowed by parameters."""
class User_models:
    """User class that will be shadowed by function parameters."""

    def __init__(self, name: str):
        self.name = name
        self.id = hash(name) % 10000

    def __repr__(self):
        return f"User(name={self.name!r}, id={self.id})"
result = "global_result"
class User_models:
    """User class that will be shadowed by function parameters."""

    def __init__(self, name: str):
        self.name = name
        self.id = hash(name) % 10000

    def __repr__(self):
        return f"User(name={self.name!r}, id={self.id})"
def process_user(User: "User") -> str:
    """Function with parameter shadowing the imported User class."""
    return f"Processing: {User.name}"
class User_models:
    """User class that will be shadowed by function parameters."""

    def __init__(self, name: str):
        self.name = name
        self.id = hash(name) % 10000

    def __repr__(self):
        return f"User(name={self.name!r}, id={self.id})"
def create_connection(Connection: str) -> str:
    """Function with parameter shadowing the imported Connection class."""
    return f"Connection string: {Connection}"
class User_models:
    """User class that will be shadowed by function parameters."""

    def __init__(self, name: str):
        self.name = name
        self.id = hash(name) % 10000

    def __repr__(self):
        return f"User(name={self.name!r}, id={self.id})"
def manipulate_result(result: int) -> int:
    """Function with parameter shadowing the global variable."""
    return result * 2
class Connection_models:
    """Connection class that will be shadowed by function parameters."""

    def __init__(self, host: str, port: int):
        self.host = host
        self.port = port
        self.connected = False

    def connect(self):
        """Simulate connection."""
        self.connected = True
        return f"Connected to {self.host}:{self.port}"

    def __repr__(self):
        return f"Connection(host={self.host!r}, port={self.port}, connected={self.connected})"
class Manager:
    """Class with methods that have shadowing parameters."""

    def __init__(self):
        self.users = []
        self.connections = []

    def add_user(self, User: "User") -> None:
        """Method with parameter shadowing the User class."""
        self.users.append(User)
        print(f"Added user: {User.name}")

    def add_connection(self, Connection: "Connection") -> None:
        """Method with parameter shadowing the Connection class."""
        self.connections.append(Connection)
        print(f"Added connection: {Connection.host}")

    def process_with_shadow(self, result: str) -> str:
        """Method with parameter shadowing the global variable."""
        global_val = globals()["result"]
        return f"Param: {result}, Global: {global_val}"
class Connection_models:
    """Connection class that will be shadowed by function parameters."""

    def __init__(self, host: str, port: int):
        self.host = host
        self.port = port
        self.connected = False

    def connect(self):
        """Simulate connection."""
        self.connected = True
        return f"Connected to {self.host}:{self.port}"

    def __repr__(self):
        return f"Connection(host={self.host!r}, port={self.port}, connected={self.connected})"
class Manager:
    """Class with methods that have shadowing parameters."""

    def __init__(self):
        self.users = []
        self.connections = []

    def add_user(self, User: "User") -> None:
        """Method with parameter shadowing the User class."""
        self.users.append(User)
        print(f"Added user: {User.name}")

    def add_connection(self, Connection: "Connection") -> None:
        """Method with parameter shadowing the Connection class."""
        self.connections.append(Connection)
        print(f"Added connection: {Connection.host}")

    def process_with_shadow(self, result: str) -> str:
        """Method with parameter shadowing the global variable."""
        global_val = globals()["result"]
        return f"Param: {result}, Global: {global_val}"
class Connection_models:
    """Connection class that will be shadowed by function parameters."""

    def __init__(self, host: str, port: int):
        self.host = host
        self.port = port
        self.connected = False

    def connect(self):
        """Simulate connection."""
        self.connected = True
        return f"Connected to {self.host}:{self.port}"

    def __repr__(self):
        return f"Connection(host={self.host!r}, port={self.port}, connected={self.connected})"
class Manager:
    """Class with methods that have shadowing parameters."""

    def __init__(self):
        self.users = []
        self.connections = []

    def add_user(self, User: "User") -> None:
        """Method with parameter shadowing the User class."""
        self.users.append(User)
        print(f"Added user: {User.name}")

    def add_connection(self, Connection: "Connection") -> None:
        """Method with parameter shadowing the Connection class."""
        self.connections.append(Connection)
        print(f"Added connection: {Connection.host}")

    def process_with_shadow(self, result: str) -> str:
        """Method with parameter shadowing the global variable."""
        global_val = globals()["result"]
        return f"Param: {result}, Global: {global_val}"
class Connection_models:
    """Connection class that will be shadowed by function parameters."""

    def __init__(self, host: str, port: int):
        self.host = host
        self.port = port
        self.connected = False

    def connect(self):
        """Simulate connection."""
        self.connected = True
        return f"Connected to {self.host}:{self.port}"

    def __repr__(self):
        return f"Connection(host={self.host!r}, port={self.port}, connected={self.connected})"
class Manager:
    """Class with methods that have shadowing parameters."""

    def __init__(self):
        self.users = []
        self.connections = []

    def add_user(self, User: "User") -> None:
        """Method with parameter shadowing the User class."""
        self.users.append(User)
        print(f"Added user: {User.name}")

    def add_connection(self, Connection: "Connection") -> None:
        """Method with parameter shadowing the Connection class."""
        self.connections.append(Connection)
        print(f"Added connection: {Connection.host}")

    def process_with_shadow(self, result: str) -> str:
        """Method with parameter shadowing the global variable."""
        global_val = globals()["result"]
        return f"Param: {result}, Global: {global_val}"
class Connection_models:
    """Connection class that will be shadowed by function parameters."""

    def __init__(self, host: str, port: int):
        self.host = host
        self.port = port
        self.connected = False

    def connect(self):
        """Simulate connection."""
        self.connected = True
        return f"Connected to {self.host}:{self.port}"

    def __repr__(self):
        return f"Connection(host={self.host!r}, port={self.port}, connected={self.connected})"
class Manager:
    """Class with methods that have shadowing parameters."""

    def __init__(self):
        self.users = []
        self.connections = []

    def add_user(self, User: "User") -> None:
        """Method with parameter shadowing the User class."""
        self.users.append(User)
        print(f"Added user: {User.name}")

    def add_connection(self, Connection: "Connection") -> None:
        """Method with parameter shadowing the Connection class."""
        self.connections.append(Connection)
        print(f"Added connection: {Connection.host}")

    def process_with_shadow(self, result: str) -> str:
        """Method with parameter shadowing the global variable."""
        global_val = globals()["result"]
        return f"Param: {result}, Global: {global_val}"
class Manager:
    """Class with methods that have shadowing parameters."""

    def __init__(self):
        self.users = []
        self.connections = []

    def add_user(self, User: "User") -> None:
        """Method with parameter shadowing the User class."""
        self.users.append(User)
        print(f"Added user: {User.name}")

    def add_connection(self, Connection: "Connection") -> None:
        """Method with parameter shadowing the Connection class."""
        self.connections.append(Connection)
        print(f"Added connection: {Connection.host}")

    def process_with_shadow(self, result: str) -> str:
        """Method with parameter shadowing the global variable."""
        global_val = globals()["result"]
        return f"Param: {result}, Global: {global_val}"
def complex_shadowing(User: type, Connection: callable, result: list) -> dict:
    """Function with multiple shadowing parameters of different types."""
    return {"user_type": User.__name__ if hasattr(User, "__name__") else str(User), "connection_callable": Connection() if callable(Connection) else None, "result_list": len(result) if isinstance(result, list) else 0}
def main():
    """Demonstrate the shadowing patterns."""
    user = User("Alice")
    conn = Connection("localhost", 5432)
    print(process_user(user))
    print(create_connection("postgres://localhost"))
    print(manipulate_result(10))
    manager = Manager()
    manager.add_user(user)
    manager.add_connection(conn)
    print(manager.process_with_shadow("parameter_value"))
    shadow_result = complex_shadowing(User=type("DynamicUser", (), {}), Connection=lambda: "dynamic_connection", result=[1, 2, 3])
    print(f"Complex shadowing result: {shadow_result}")
    print(f"Global result value: {result}")
    print(f"User class accessible: {User}")
    print(f"Connection class accessible: {Connection}")
if __name__ == "__main__":
    main()
if __name__ == "__main__":
    main()
